[package]
name = "assert-within"
version = "0.1.0"
edition = "2024"
authors = ["Chris Beck <beck.ct@gmail.com>"]
keywords = ["assert", "test", "numerics", "float", "no_std"]
categories = ["development-tools"]
description = "Macro for testing that (generic) floating point numbers are within some tolerance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cbeck88/assert-within"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
